--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,157 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f8ff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* background-color: white; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow-y: hidden;
+  background: linear-gradient(180deg, rgb(157, 90, 226), white, white, cyan);
+  /* background-size: 800% 800%;
+  animation: gradientAnimation 30s ease infinite; */
+}
+
+.blur {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  background-color: rgba(0, 0, 0, 0);
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
+}
+
+@keyframes gradientAnimation {
+  0% {
+    background-position: 0% 50%;
   }
-  
-  .app-container {
-    text-align: center;
+  50% {
+    background-position: 100% 50%;
   }
-  
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+
+button, select {
+  padding: 1rem;
+  font-size: medium;
+  background-color: black;
+  color: white;
+  border: none;
+  cursor: pointer;
+  border-radius: 0.75rem;
+}
+
+.progress {
+  width: 100%;
+  background-color: rgba(220, 220, 220, 0.3);
+  height: 2rem;
+  border-radius: 1rem;
+  margin: 0.75rem 0;
+  position: relative;
+}
+
+#progress-bar {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background-color: indigo;
+  width: 0%;
+  border-radius: 1rem;
+}
+
+/* .big-button {
+  margin: 1.25rem 0;
+} */
+
+.big-button:hover {
+  background-color: indigo;
+}
+
+.container {
+  background-color: rgba(220, 220, 220, 0.5);
+  border: 2px solid rgba(220, 220, 220, 0.8);
+  padding: 1.25rem;
+  border-radius: 2rem;
+}
+
+/* Modal styling */
+.modal {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  gap: 0.7rem;
+  min-width: 20rem;
+}
+
+input {
+  background-color: rgba(0, 0, 0, 0);
+  color: black;
+  border: none;
+  font-size: medium;
+}
+
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: large;
+  cursor: pointer;
+}
+
+#congrats-message {
+  color: indigo;
+  font-weight: bold;
+  display: none;
+}
+
+@media (prefers-color-scheme: dark) {
+  body {
+    background: linear-gradient(180deg, rgb(72, 11, 135), black, black, rgb(11, 33, 135));
+    /* background-size: 800% 800%;
+    animation: gradientAnimation 30s ease infinite; */
+    color: white;
+  }
+
+  button, select {
+    background-color: white;
+    color: black;
+  }
+
   .progress {
-    width: 100%;
-    background-color: #e0e0e0;
-    height: 30px;
-    border-radius: 15px;
-    margin: 10px 0;
-    position: relative;
+    background-color: rgba(20, 20, 20, 0.3);
   }
-  
-  #progress-bar {
-    height: 100%;
-    background-color: #76c7c0;
-    width: 0%;
-    border-radius: 15px;
+
+  .container {
+    background-color: rgba(20, 20, 20, 0.5);
+    border: 2px solid rgba(20, 20, 20, 0.7);
   }
-  
-  #congrats-message {
-    color: green;
-    font-weight: bold;
-    display: none;
+
+  input {
+    color: white;
   }
+}
+
+@media (max-width: 22rem) {
+  .modal-content {
+    min-width: 15rem;
+  }
+}
