--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,26 @@
+:root {
+  --safe-area-inset-top: env(safe-area-inset-top);
+  --safe-area-inset-bottom: env(safe-area-inset-bottom);
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  /* background-color: white; */
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  gap: 0.7rem;
+  padding: 1rem;
+  margin-top: var(--safe-area-inset-top);
+  /* align-items: center; */
   height: 100vh;
   overflow-y: hidden;
   background-color: white;
-  /* background: linear-gradient(180deg, rgb(157, 90, 226), white, white, cyan); */
-  /* background-size: 800% 800%;
-  animation: gradientAnimation 30s ease infinite; */
+  user-select: none;
+  -webkit-user-select: none;
 }
 
-.blur {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  z-index: -1;
-  background-color: rgba(0, 0, 0, 0);
-  backdrop-filter: blur(30px);
-  -webkit-backdrop-filter: blur(30px);
+h1 {
+  margin-top: 4rem;
 }
-
-@keyframes gradientAnimation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
 
 button, select {
   padding: 1rem;
@@ -44,63 +29,14 @@ button, select {
   color: white;
   border: none;
   cursor: pointer;
-  border-radius: 0.75rem;
-}
-
-.progress {
-  width: 100%;
-  background-color: rgba(220, 220, 220, 0.3);
-  height: 2rem;
   border-radius: 1rem;
-  margin: 0.75rem 0;
-  position: relative;
+  transition: 0.3s ease-in-out;
 }
 
-#progress-bar {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
+button:hover {
   background-color: indigo;
-  width: 0%;
-  border-radius: 1rem;
-}
-
-/* .big-button {
-  margin: 1.25rem 0;
-} */
-
-.big-button:hover {
-  background-color: indigo;
-}
-
-.container {
-  background-color: rgba(220, 220, 220, 0.5);
-  border: 2px solid rgba(220, 220, 220, 0.8);
-  padding: 1.25rem;
-  border-radius: 2rem;
-}
-
-/* Modal styling */
-.modal {
-  display: none;
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  justify-content: center;
-  align-items: center;
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-}
-
-.modal-content {
-  display: flex;
-  flex-direction: column;
-  gap: 0.7rem;
-  min-width: 20rem;
+  box-shadow: 0 0 3rem indigo;
+  color: white;
 }
 
 input {
@@ -110,12 +46,110 @@ input {
   font-size: medium;
 }
 
-.close-btn {
+svg {
+  height: 100%;
+  width: auto;
+  margin: 1rem;
+}
+
+a {
+  color: black;
+}
+
+.tabBar {
+  position: fixed;
+  overflow: scroll;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  bottom: 1.5rem;
+  margin-bottom: var(--safe-area-inset-bottom);
+  border-radius: 1rem;
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+  padding: 0.25rem;
+}
+
+.selected {
+  background-color: indigo;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.75rem;
+  padding: 0.25rem;
+  width: fit-content;
+  height: fit-content;
+}
+
+.progress {
+  width: 100%;
+  background-color: rgba(220, 220, 220, 0.3);
+  height: 2rem;
+  border-radius: 1rem;
+  margin: 0.75rem 0;
+  position: relative;
+  max-width: 15rem;
+}
+
+#progress-bar {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: large;
-  cursor: pointer;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background-color: indigo;
+  box-shadow: 0 0 3rem indigo;
+  width: 0%;
+  border-radius: 1rem;
+  transition: 0.3s ease-in-out;
+}
+
+.container {
+  padding: 1rem;
+  border-radius: 2rem;
+  display: flex;
+  flex-direction: column;
+  max-width: 15rem;
+  /* flex-wrap: wrap; */
+  gap: 0.75rem;
+}
+
+.container, .tabBar {
+  background-color: rgba(220, 220, 220, 0.5);
+  border: 2px solid rgba(220, 220, 220, 0.8);
+}
+
+#app-updated {
+  display: flex;
+  position: fixed;
+  transform: translateX(-50%);
+  left: 50%;
+  top: 1rem;
+  max-width: 15rem;
+  background-color: rgba(220, 220, 220, 0.8);
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  font-size: small;
+  justify-content: center;
+  animation: slideFadeUp 0.5s ease-in-out;
+  animation-fill-mode: forwards;
+  animation-delay: 1s;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+}
+
+@keyframes slideFadeUp {
+  0% {
+    opacity: 1;
+    filter: blur(0);
+    transform: 0 0;
+  }
+  100% {
+    opacity: 0;
+    filter: blur(10px);
+    translate: 0 -100%;
+  }
 }
 
 #congrats-message {
@@ -124,12 +158,17 @@ input {
   display: none;
 }
 
+.hidden {
+  display: none;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
-    background-color: black;
-    /* background: linear-gradient(180deg, rgb(72, 11, 135), black, black, rgb(11, 33, 135)); */
-    /* background-size: 800% 800%;
-    animation: gradientAnimation 30s ease infinite; */
+    background-color: rgb(0, 0, 0);
+    color: white;
+  }
+
+  a {
     color: white;
   }
 
@@ -138,13 +177,17 @@ input {
     color: black;
   }
 
-  .progress {
-    background-color: rgba(20, 20, 20, 0.3);
+  #app-updated {
+    background-color: rgba(37, 37, 37, 0.8);
   }
 
-  .container {
-    background-color: rgba(20, 20, 20, 0.5);
-    border: 2px solid rgba(20, 20, 20, 0.7);
+  .progress {
+    background-color: rgb(26, 26, 26);
+  }
+
+  .container, .tabBar {
+    background-color: rgba(26, 26, 26, 0.5);
+    border: 2px solid rgba(26, 26, 26, 0.7);
   }
 
   input {
@@ -152,8 +195,14 @@ input {
   }
 }
 
-@media (max-width: 22rem) {
-  .modal-content {
-    min-width: 15rem;
+@media (max-width: 25rem) {
+  .container, .progress {
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 28rem) {
+  .container, .progress {
+    min-width: 25rem;
   }
 }
