--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,7 @@ a {
   display: flex;
   flex-direction: column;
   max-width: 15rem;
+  margin-top: 1.5rem;
   /* flex-wrap: wrap; */
   gap: 0.75rem;
 }
