--- a/styles.css
+++ b/styles.css
@@ -86,8 +86,8 @@ a {
 
 .progress {
   width: 100%;
-  background-color: rgba(220, 220, 220, 0.3);
-  height: 2rem;
+  background-color: rgb(220, 220, 220);
+  height: 2rem !important;
   border-radius: 1rem;
   margin: 0.75rem 0;
   position: relative;
